[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yearn-data"
version = "0.1.0"
description = "Reusable Yearn vault data indexing and analysis toolkit"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=0.16.0",
    "requests>=2.28.0",
    "web3>=7.0.0,<8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
yprice = [
    "ypricemagic>=5.2.25",
]

[project.scripts]
yearn-data = "yearn_data.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
